--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ParametroAF/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ParametroAF/Index.cshtml
@@ -28,22 +28,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="IdCtaCble_Activo">Cuenta contable para activo</label>
-                                @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Activo, settings =>
-                   {
-                       settings.Name = "IdCtaCble_Activo";
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                       settings.Properties.Columns.Add("IdCtaCble", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                       settings.Properties.Columns.Add("pc_Cuenta", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
-                       //Campo ID
-                       settings.Properties.ValueField = "IdCtaCble";
-                       settings.Properties.ValueType = typeof(int);
-                       settings.Properties.TextField = "pc_Cuenta";
-                       //Boton para seleccionar ningun registro
-                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                       settings.Properties.NullText = "== Seleccione ==";
-                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                   }).BindList(ViewBag.lst_cta).GetHtml()
+                                @Html.Partial("_CmbCuenta_Param1", Model)
                                 @Html.ValidationMessageFor(q => q.IdCtaCble_Activo, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -55,22 +40,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="IdCtaCble_Dep_Acum">Cuenta contable depreciación acumulada</label>
-                                @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Dep_Acum, settings =>
-                   {
-                       settings.Name = "IdCtaCble_Dep_Acum";
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                       settings.Properties.Columns.Add("IdCtaCble", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                       settings.Properties.Columns.Add("pc_Cuenta", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
-                       //Campo ID
-                       settings.Properties.ValueField = "IdCtaCble";
-                       settings.Properties.ValueType = typeof(int);
-                       settings.Properties.TextField = "pc_Cuenta";
-                       //Boton para seleccionar ningun registro
-                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                       settings.Properties.NullText = "== Seleccione ==";
-                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                   }).BindList(ViewBag.lst_cta).GetHtml()
+                                @Html.Partial("_CmbCuenta_Param2", Model)
                                 @Html.ValidationMessageFor(q => q.IdCtaCble_Dep_Acum, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -83,22 +53,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="IdCtaCble_Gastos_Depre">Cuenta contable gastos de depreciación</label>
-                                @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Gastos_Depre, settings =>
-                   {
-                       settings.Name = "IdCtaCble_Gastos_Depre";
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                       settings.Properties.Columns.Add("IdCtaCble", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                       settings.Properties.Columns.Add("pc_Cuenta", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
-                       //Campo ID
-                       settings.Properties.ValueField = "IdCtaCble";
-                       settings.Properties.ValueType = typeof(int);
-                       settings.Properties.TextField = "pc_Cuenta";
-                       //Boton para seleccionar ningun registro
-                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                       settings.Properties.NullText = "== Seleccione ==";
-                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                   }).BindList(ViewBag.lst_cta).GetHtml()
+                                @Html.Partial("_CmbCuenta_Param3", Model)
                                 @Html.ValidationMessageFor(q => q.IdCtaCble_Gastos_Depre, "", new { @class = "text-danger" })
                             </div>
                         </div>
