--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametroInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametroInventario/Index.cshtml
@@ -132,44 +132,14 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="IdCtaCble_CostoInven">Cta. Cble. costo</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_CostoInven, settings =>
-                            {
-                                settings.Name = "IdCtaCble_CostoInven";
-                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                                settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                                settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                                //Campo ID
-                                settings.Properties.ValueField = "IdCtaCble";
-                                settings.Properties.ValueType = typeof(string);
-                                settings.Properties.TextField = "pc_Cuenta";
-                                //Boton para seleccionar ningun registro
-                                settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                                settings.Properties.NullText = "== Seleccione ==";
-                                settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                            }).BindList(ViewBag.lst_cuentas).GetHtml()
+                            @Html.Partial("_CmbCuenta_Param1", Model)
                             @Html.ValidationMessageFor(q => q.IdCtaCble_CostoInven, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="IdCtaCble_Inven">Cta. Cble. inventario</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Inven, settings =>
-                            {
-                                settings.Name = "IdCtaCble_Inven";
-                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                                settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                                settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                                //Campo ID
-                                settings.Properties.ValueField = "IdCtaCble";
-                                settings.Properties.ValueType = typeof(string);
-                                settings.Properties.TextField = "pc_Cuenta";
-                                //Boton para seleccionar ningun registro
-                                settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                                settings.Properties.NullText = "== Seleccione ==";
-                                settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                            }).BindList(ViewBag.lst_cuentas).GetHtml()
+                            @Html.Partial("_CmbCuenta_Param2", Model)
                             @Html.ValidationMessageFor(q => q.IdCtaCble_Inven, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -224,22 +194,7 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="P_IdCtaCble_transitoria_transf_inven">Cta. Cble. puente para transferencias</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.P_IdCtaCble_transitoria_transf_inven, settings =>
-                            {
-                                settings.Name = "P_IdCtaCble_transitoria_transf_inven";
-                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                                settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                                settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                                //Campo ID
-                                settings.Properties.ValueField = "IdCtaCble";
-                                settings.Properties.ValueType = typeof(string);
-                                settings.Properties.TextField = "pc_Cuenta";
-                                //Boton para seleccionar ningun registro
-                                settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                                settings.Properties.NullText = "== Seleccione ==";
-                                settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                            }).BindList(ViewBag.lst_cuentas).GetHtml()
+                            @Html.Partial("_CmbCuenta_Param3", Model)
                             @Html.ValidationMessageFor(q => q.P_IdCtaCble_transitoria_transf_inven, "", new { @class = "text-danger" })
                         </div>
                     </div>
