--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/_GridViewPartial_vacaciones_liquidadas_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/_GridViewPartial_vacaciones_liquidadas_det.cshtml
@@ -20,10 +20,14 @@
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
-        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
+
+
+        //CConfiguracion responsive
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
         //Funcion para inicializar fila al presionar nuevo
         settings.Columns.Add(column =>
         {
