--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Nuevo.cshtml
@@ -201,7 +201,7 @@
             {
                  var datos = {
                      MontoSol: $("#MontoSol").val(),
-                     Fecha_PriPago: Fecha_PriPago.GetValuel(),
+                     Fecha_PriPago: Fecha_PriPago.GetValue(),
                      NumCuotas: $("#NumCuotas").val(),
                      descuento_mensual: descuento_mensual.GetValue(),
                      descuento_quincena: descuento_quincena.GetValue(),
