--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/_GridViewPartial_prestamos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/_GridViewPartial_prestamos.cshtml
@@ -12,11 +12,14 @@
             settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
             settings.Width = Unit.Percentage(100);
 
+            //CConfiguracion responsive
             settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
             settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
             settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
             settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
             settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+
+          
 
             settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
             settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
