--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_rubros.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_rubros.cshtml
@@ -19,17 +19,19 @@
         settings.Settings.ShowFilterRow = true;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
 
-        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
+
+        //CConfiguracion responsive
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
         settings.Columns.Add("DescripcionDiv","División").Width=Unit.Percentage(15);
         settings.Columns.Add("DescripcionArea","Área").Width = Unit.Percentage(15);
         settings.Columns.Add("de_descripcion","Departamento").Width = Unit.Percentage(15);
         settings.Columns.Add("ru_descripcion","Rubro").Width = Unit.Percentage(20);
-       settings.Columns.Add(column =>
+        settings.Columns.Add(column =>
         {
             column.FieldName = "IdCtaCble";
             column.Caption = "Cta. contable";
