--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbProducto_composicion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbProducto_composicion.cshtml
@@ -23,7 +23,8 @@
 
     })
     .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_list_bajo_demandaComposicion,
-    new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_info_bajo_demanda).Bind(Model);
+    new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_info_bajo_demanda)
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Inventario.in_Producto_Info) ? "" : (Model == 0 ? "" : Model));
 }
 @comboBox.GetHtml()
 
