--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -66,7 +66,7 @@
                 <div class="col-md-12">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label for="IdProducto_padre">Producto padre*</label>
+                            <label for="IdProducto_padre">Producto padre</label>
                             @Html.Partial("_CmbProducto_padre", Model)
                             @Html.ValidationMessageFor(q => q.IdProducto_padre, "", new { @class = "text-danger" })
                         </div>
