--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_012.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_012.cshtml
@@ -56,9 +56,9 @@
                                         <div class="input-group-addon">
                                             <i class="fa fa-calendar"></i>
                                         </div>
-                                        @Html.DevExpress().DateEditFor(q=> q.fecha_ini, settings =>
+                                        @Html.DevExpress().DateEditFor(q=> q.fecha_fin, settings =>
                                     {
-                                        settings.Name = "fecha_ini";
+                                        settings.Name = "fecha_fin";
                                         settings.Properties.UseMaskBehavior = true;
                                         settings.Properties.EditFormat = EditFormat.Date;
                                         settings.Properties.EditFormatString = "dd/MM/yyyy";
