--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_013.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_013.cshtml
@@ -9,6 +9,7 @@
 }
 @using (Html.BeginForm("ROL_013", "RRHHReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q=>q.IdEmpresa)
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -28,7 +29,7 @@
         <div class="box-body">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="form-group">
                             <label for="IdNomina">Nomina</label>
                             @Html.DevExpress().ComboBoxFor(q => q.IdNomina, settings =>
@@ -48,7 +49,12 @@
                            settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                            settings.Properties.AllowNull = true;
                        }).BindList(ViewBag.lst_nomina).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdNomina, "", new { @class = "text-danger" })
+                        </div>
+                    </div>       
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="IdProveedor">Empleado</label>
+                            @Html.Partial("_CmbEmpleado_RRHH", Model.IdEmpleado)
                         </div>
                     </div>
                     <div class="col-md-2">
