--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Nuevo.cshtml
@@ -37,6 +37,9 @@
                     <div class="checkbox">
                         <label for="es_empresa_relacionada">@Html.CheckBoxFor(q => q.es_empresa_relacionada) Es empresa relacionada</label>
                     </div>
+                    <div class="checkbox">
+                        <label for="EsClienteExportador">@Html.CheckBoxFor(q => q.EsClienteExportador) Es cliente para exportación</label>
+                    </div>
                 </div>
             </div>
         </div>
