--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
@@ -285,7 +285,8 @@
         var datos = {
             IdSucursal: $("#IdSucursal").val(),
             IdBodega: $("#IdBodega").val(),
-            IdProducto: s.GetValue()
+            IdProducto: s.GetValue(),
+            IdCliente: IdCliente.GetValue()
         }
         $.ajax({
             type: 'POST',
