--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
@@ -386,7 +386,8 @@
             IdSucursal: $("#IdSucursal").val(),
             IdPuntoVta: $("#IdPuntoVta").val(),
             Secuencia: Secuencia,
-            IdTransaccionSession: $("#IdTransaccionSession").val()
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            IdCliente: IdCliente.GetValue()
         }
         $.ajax({
             type: 'POST',
@@ -559,7 +560,8 @@
         var datos = {
             IdSucursal: $("#IdSucursal").val(),
             IdPuntoVta: $("#IdPuntoVta").val(),
-            IdProducto: s.GetValue()
+            IdProducto: s.GetValue(),
+            IdCliente: IdCliente.GetValue()
         }
         $.ajax({
             type: 'POST',
