--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_013.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_013.cshtml
@@ -37,8 +37,8 @@
                            settings.Name = "IdNomina";
                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                            settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                           settings.Properties.Columns.Add("IdNomina_Tipo", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                           settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                           settings.Properties.Columns.Add("IdNomina_Tipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                           settings.Properties.Columns.Add("Descripcion", "Nómina").Width = System.Web.UI.WebControls.Unit.Percentage(90);
                            //Campo ID
                            settings.Properties.ValueField = "IdNomina_Tipo";
                            settings.Properties.ValueType = typeof(int);
@@ -47,7 +47,6 @@
                            settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
                            settings.Properties.NullText = "== Seleccione ==";
                            settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                           settings.Properties.AllowNull = true;
                        }).BindList(ViewBag.lst_nomina).GetHtml()
                         </div>
                     </div>       
