--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Index.cshtml
@@ -8,7 +8,7 @@
     Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Index", "Factura", FormMethod.Post, new { @role = "form", @class = "form" }))
+@using (Html.BeginForm("Index", "GuiaRemision", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
     <div class="box ">
         <div class="box-header with-border">
