--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ImportacionReportes/_CmbProveedor_Importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ImportacionReportes/_CmbProveedor_Importacion.cshtml
@@ -10,20 +10,21 @@
         settings.CallbackRouteValues = new { Controller = "ImportacionReportes", Action = "CmbProveedor_Importacion", Area = "Reportes" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
-        settings.Properties.TextField = "pe_nombreCompleto";
-        settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
+        settings.Properties.TextField = "pe_nombreCompleto";
+        settings.Properties.TextFormatString = "[{0}] {1} {2}";
+        settings.Properties.FilterMinLength = 3;
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.NullText = "== Seleccione ==";
+        settings.Properties.AllowNull = true;
 
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Proveedor", 70);
-        settings.Properties.FilterMinLength = 3;
     })
     .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.ImportacionReportesController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Reportes.Controllers.ImportacionReportesController().get_info_bajo_demanda)
-    .Bind(Model.IdProveedor);
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Helps.cl_filtros_importacion_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
 @comboBox.GetHtml()
