--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_013.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_013.cshtml
@@ -33,21 +33,22 @@
                         <div class="form-group">
                             <label for="IdNomina">Nomina</label>
                             @Html.DevExpress().ComboBoxFor(q => q.IdNomina, settings =>
-                       {
-                           settings.Name = "IdNomina";
-                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                           settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                           settings.Properties.Columns.Add("IdNomina_Tipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                           settings.Properties.Columns.Add("Descripcion", "Nómina").Width = System.Web.UI.WebControls.Unit.Percentage(90);
-                           //Campo ID
-                           settings.Properties.ValueField = "IdNomina_Tipo";
-                           settings.Properties.ValueType = typeof(int);
-                           settings.Properties.TextField = "Descripcion";
-                           //Boton para seleccionar ningun registro
-                           settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                           settings.Properties.NullText = "== Seleccione ==";
-                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                       }).BindList(ViewBag.lst_nomina).GetHtml()
+                           {
+                               settings.Name = "IdNomina";
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                               settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                               settings.Properties.Columns.Add("IdNomina_Tipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                               settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
+                               //Campo ID
+                               settings.Properties.ValueField = "IdNomina_Tipo";
+                               settings.Properties.ValueType = typeof(int);
+                               settings.Properties.TextField = "Descripcion";
+                               settings.Properties.NullText = "== Seleccione ==";
+                               
+                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                           }).BindList(ViewBag.lst_nomina).GetHtml()
+                            @Html.ValidationMessageFor(q => q.IdNomina, "", new { @class = "text-danger" })
+
                         </div>
                     </div>       
                     <div class="col-md-4">
