--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/MarcacionEmpleado/_CmbEmpleado_marcacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/MarcacionEmpleado/_CmbEmpleado_marcacion.cshtml
@@ -7,7 +7,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = " MarcacionEmpleado", Action = "CmbEmpleado_marcacion", Area = "RRHH" };
+        settings.CallbackRouteValues = new { Controller = "MarcacionEmpleado", Action = "CmbEmpleado_Marcacion", Area = "RRHH" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
@@ -23,7 +23,7 @@
         settings.Properties.FilterMinLength = 3;
 
     })
-    .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.MarcacionEmpleadoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.RRHH.Controllers.MarcacionEmpleadoController().get_info_bajo_demanda)
+    .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.MarcacionEmpleadoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoNovedadController().get_info_bajo_demanda)
     .Bind(Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_marcaciones_x_empleado_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
